# miniature_sorter

./: .gitignore  LICENSE  pyproject.toml
miniature_sorter/: constants.py  logger.py  main.py  main_compress.py  rar_handler.py
miniature_sorter/artist_connectors/: exceptions.py
miniature_sorter/artist_connectors/bite_the_bullet/: __init__.py  bite_the_bulet_connector.py
miniature_sorter/artist_connectors/bite_the_bullet/tests/: test_bite_the_bullet_connector.py
miniature_sorter/artist_connectors/cast_n_play/: __init__.py  cast_n_play_connector.py
miniature_sorter/artist_connectors/cast_n_play/tests/: test_cast_n_play_connector.py
