[project]
name = "miniature_sorter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"

dependencies = [
    "loguru>=0.7.3",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = []

[tool.isort]
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["STDLIB", "LOCALFOLDER"]
known_third_party = []
multi_line_output = 3
lines_after_imports = 2
profile = "black"
combine_as_imports = true

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
fix = true
exclude = [
    ".git",
    ".ruff_cache",
    "venv",
]
line-length = 120
target-version = "py312"
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "I",
    "EM",
    "FBT",
    "TRY003",
    "S101",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "G004",
    "D107",
    "D211",
    "D213",
    "FA102",
    "ANN101",
    "FIX002",
    "TD002",
    "TD003",
    "S301", # We know this issue and there is no need for any reminders.
    "N812", # There is a convention for some imports like functions being imported as F.
    "N803", # Names like X is expected to be uppercase by convention.
    "N806", # Names like X is expected to be uppercase by convention.
    "PLR0913", # Sorry..?
    "ANN401", # If I use typing.Any, I have a reason to do this.
    "RUF001", # We use Russian language for prompts.
    "EXE002", # Filesystem issues sorry :(
]

fixable = ["ALL"]
unfixable = ["F841"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
